--- a/dashboard-ui/public/index.html
+++ b/dashboard-ui/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Fitness Readings application"
     />
-    <title>Patient Readings</title>
+    <title>Fitness Readings</title>
   </head>
   <body>
     <div id="root"></div>
